compilers/ID/cool/regression/BASE_semanttest/bugaug22a.cl.stderr
Class Main is not defined.
./BASE_semanttest/bugaug22a.cl:4: Undefined return type Void in method f.
Compilation halted due to static semantic errors.
