compilers/ID/cool/regression/BASE_semanttest/bugaug22a.cl
class MAIN is
  f():Void is
	let a : Int in 5 end
  end;
end;
